--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "rust-govhost"
+name = "rust-vhost"
 version = "0.1.0"
 edition = "2021"
 description = "a simple tool for extract SNI from tls handshake where you transfer traffic to any destination you want"
